added resolution for events question

--- a/packages/project/lib/index.css
+++ b/packages/project/lib/index.css
@@ -13,6 +13,11 @@
     font-size: 16px;
 }
 
+.cycles {
+    color: #11418C;
+    font-size: 16px;
+}
+
 .stage {
     margin-top: 20px;
     background-color: #C7EFDB;
