--- a/examples-other-frameworks/mini-benchmark-react/src/index.css
+++ b/examples-other-frameworks/mini-benchmark-react/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.title {
+  color: #11418C;
+  font-size: 24px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.progress {
+  color: #11418C;
+  font-size: 16px;
+}
+
+.select-example {
+  color: #11418C;
+  font-size: 16px;
+}
+
+.cycles {
+  color: #11418C;
+  font-size: 16px;
+}
+
+.stage {
+  margin-top: 20px;
+  background-color: #C7EFDB;
 }
