--- a/packages/compiler/test/fixtures/components/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/components/component-in-component/source.jay.html
@@ -13,9 +13,8 @@ data:
 <body>
 <div>
     <Counter ref="counter1" initialValue={count1} />
-    <Counter ref="counter-two" initialValue="{count2} + 2" />
-    <Counter initialValue="{count1} + {count2}"/>
-    <Counter initialValue="12"/>
+    <Counter ref="counter-two" initialValue="{count2}" />
+    <Counter initialValue="{count3}"/>
     <Counter initialValue="{count4.count}"/>
 </div>
 </body>
