fixed bug in compiler for expressions with a variable and trailing text - which failed to render the trailing text

--- a/packages/compiler/test/fixtures/components/recursive-components-2/source.jay.html
+++ b/packages/compiler/test/fixtures/components/recursive-components-2/source.jay.html
@@ -13,7 +13,7 @@ data:
     <div>{node.name}</div>
     <ul>
         <li forEach="node.children" trackBy="id">
-            <TreeNode props={.}"/>
+            <TreeNode props={.}/>
         </li>
     </ul>
 </div>
