--- a/packages/compiler/test/fixtures/components/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/components/component-in-component/source.jay.html
@@ -16,6 +16,7 @@ data:
     <Counter ref="counter-two" initialValue="{count2}" />
     <Counter initialValue="{count3}"/>
     <Counter initialValue="{count4.count}"/>
+    <Counter initialValue="25"/>
 </div>
 </body>
 </html>
