refactored compiler tests to use `generated-element.ts` file name, to support next the `generated-secure-element.ts` files

--- a/packages/compiler/test/fixtures/components/component-in-component/source.jay.html
+++ b/packages/compiler/test/fixtures/components/component-in-component/source.jay.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="import" href="../counter/counter" names="Counter"/>
-    <link rel="import" href="../counter/generated" names="CounterViewState as CounterData"/>
+    <link rel="import" href="../counter/generated-element" names="CounterViewState as CounterData"/>
     <script type="application/yaml-jay">
 data:
   count1: number
