--- a/examples/scrum-board/lib/index.css
+++ b/examples/scrum-board/lib/index.css
@@ -88,7 +88,10 @@
   color: #fff;
 }
 
-.action-button.prev:disabled, .action-button.up:disabled, .action-button.down:disabled, .action-button.next:disabled {
+.action-button.prev:disabled,
+.action-button.up:disabled,
+.action-button.down:disabled,
+.action-button.next:disabled {
   background-color: #7f7f7f;
 }
 
