--- a/examples/scrum-board/lib/index.css
+++ b/examples/scrum-board/lib/index.css
@@ -1,6 +1,18 @@
+body {
+  margin: 0;
+  padding-top: 30px;
+}
 .title {
   color: #11418c;
+  height: 30px;
   font-size: 24px;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+  border-bottom: 1px solid #bfdfcf;
+  background-color: #fff;
+  padding: 10px;
+  top: 0;
 }
 
 .stage {
