--- a/examples/todo/lib/index.css
+++ b/examples/todo/lib/index.css
@@ -1,6 +1,18 @@
+body {
+  padding-top: 30px;
+}
 .title {
   color: #11418c;
+  height: 30px;
   font-size: 24px;
+  width: 100%;
+  position: fixed;
+  text-align: center;
+  border-bottom: 1px solid #bfdfcf;
+  background-color: #fff;
+  padding: 10px;
+  top: 0;
+  z-index: 9999;
 }
 
 .progress {
@@ -19,6 +31,9 @@
 }
 
 .stage {
-  margin-top: 20px;
+  /*margin-top: 20px;*/
+  min-width: 230px;
+  max-width: 550px;
+  margin: 20px auto 0 auto;
   background-color: #c7efdb;
 }
